--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,26 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-    </dependency>
+    </dependency>  
     <dependency>
-		<groupId>com.aetrion.flickr</groupId>
-		<artifactId>flickrapi</artifactId>
-		<version>1.1</version>
-	</dependency>    
+	  <groupId>com.flickr4java</groupId>
+	  <artifactId>flickr</artifactId>
+	  <version>2.5</version>
+	</dependency>
+	<dependency>
+    	<groupId>org.apache.httpcomponents</groupId>
+    	<artifactId>httpcomponents-client</artifactId>
+    <version>4.3.1</version>
+</dependency>
+<dependency>
+	<groupId>commons-httpclient</groupId>
+	<artifactId>commons-httpclient</artifactId>
+	<version>3.1</version>
+</dependency>
+<dependency>
+  <groupId>com.flickr4java</groupId>
+  <artifactId>flickr</artifactId>
+  <version>2.5</version>
+</dependency>
   </dependencies>
 </project>
